--- a/index.html
+++ b/index.html
@@ -6,159 +6,128 @@
     <title>CRAVITY | Home</title>
     <link rel="stylesheet" href="style.css">
 	<style>
-    
+    :root {
+        --dark-purple: #4a148c;
+        --main-pink: #ff4081;
+        --nav-height: 70px;
+    }
+
+    /* 1. 幻燈片 & 容器修復 */
     .group-photo-container {
         width: 100%;
-        max-width: 1000px;
+        max-width: 900px;
         margin: 20px auto;
         padding: 0 15px;
     }
-
     #slideshow-img {
         width: 100%;
-        height: auto;
         border-radius: 20px;
-        box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-        transition: opacity 0.5s ease-in-out;
+        box-shadow: 0 15px 35px rgba(0,0,0,0.15);
+        transition: opacity 0.5s ease;
     }
 
-    .description {
+    /* 2. 重現 Glass-card 的高級感 */
+    .glass-card {
+        background: rgba(255, 255, 255, 0.7);
+        backdrop-filter: blur(15px);
+        -webkit-backdrop-filter: blur(15px);
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        border-radius: 30px;
+        padding: 40px;
+        box-shadow: 0 20px 40px rgba(0,0,0,0.1);
         text-align: center;
-        line-height: 1.8;
-        padding: 0 20px;
         max-width: 800px;
-        margin: 0 auto;
-        color: var(--dark-purple);
-        font-size: var(--p-size);
+        margin: 30px auto;
     }
 
-    .fandom {
-        text-align: center;
-        font-weight: bold;
-        color: var(--main-pink);
-        margin-top: 15px;
-    }
+    h1 { color: var(--dark-purple); font-size: 3rem; margin-bottom: 20px; }
+    .description { color: #444; line-height: 1.8; margin-bottom: 10px; font-size: 1.1rem; }
+    .fandom { font-weight: bold; color: var(--main-pink); margin-top: 20px; font-size: 1.2rem; }
 
-    .quick-nav-buttons {
-        display: flex;
-        justify-content: center;
-        gap: 12px;
-        margin: 25px 0;
-        flex-wrap: wrap;
-    }
+    /* 音檔按鈕 */
+    .audio-btn { background: none; border: none; cursor: pointer; font-size: 1.2rem; margin-left: 5px; transition: 0.2s; }
+    .audio-btn:hover { transform: scale(1.2); }
 
+    /* 3. 快速跳轉按鈕 - 回復精美樣式 */
+    .quick-nav-buttons { display: flex; justify-content: center; gap: 15px; margin: 20px 0; }
     .quick-nav-buttons button {
         background: white !important;
         color: var(--dark-purple);
         border: 2px solid var(--dark-purple);
-        padding: 8px 20px;
-        border-radius: 25px;
+        padding: 10px 25px;
+        border-radius: 50px;
         font-weight: bold;
         cursor: pointer;
-        transition: 0.3s;
-        font-size: 0.9rem;
+        transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     }
-
     .quick-nav-buttons button:hover {
         background: var(--dark-purple) !important;
         color: white;
-        transform: translateY(-3px);
+        transform: translateY(-5px);
+        box-shadow: 0 10px 20px rgba(74, 20, 140, 0.2);
     }
 
+    /* 4. 重現時間軸 Timeline (包含那條線與圓點) */
     .timeline-container {
-        max-width: 800px;
-        margin: 0 auto;
+        max-width: 700px;
+        margin: 50px auto;
+        position: relative;
         padding: 20px;
     }
+    /* 時間軸中間那條垂直線 */
+    .timeline-container::before {
+        content: '';
+        position: absolute;
+        left: 30px;
+        top: 0;
+        bottom: 0;
+        width: 3px;
+        background: var(--main-pink);
+        opacity: 0.3;
+    }
     .timeline-item {
-        border-left: 3px solid var(--main-pink);
-        margin-left: 20px;
-        padding: 10px 20px;
         position: relative;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
+        padding-left: 60px;
     }
-    .timeline-content h3 {
-        color: var(--dark-purple);
-        font-size: 1.2rem;
-    }
-
-    .cp-picker {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 15px;
-        margin-bottom: 20px;
-    }
-
-    .circle-frame {
-        width: 100px;
-        height: 100px;
+    /* 時間軸圓點 */
+    .timeline-item::after {
+        content: '';
+        position: absolute;
+        left: 23px;
+        top: 5px;
+        width: 16px;
+        height: 16px;
+        background: white;
+        border: 4px solid var(--main-pink);
         border-radius: 50%;
-        overflow: hidden;
-        border: 3px solid var(--main-pink);
-        background: #eee;
+        z-index: 2;
+    }
+    .timeline-content h3 { color: var(--dark-purple) !important; margin-bottom: 8px; font-size: 1.4rem; }
+    .timeline-content p { color: #555; line-height: 1.6; }
+
+    /* 5. CP 介紹區塊回復 */
+    .cp-picker { display: flex; align-items: center; justify-content: center; gap: 20px; margin: 30px 0; }
+    .circle-frame {
+        width: 120px; height: 120px; border-radius: 50%;
+        overflow: hidden; border: 4px solid var(--main-pink);
+        box-shadow: 0 8px 20px rgba(0,0,0,0.15);
     }
     .circle-frame img { width: 100%; height: 100%; object-fit: cover; }
+    .plus-sign { font-size: 2rem; }
 
-    .member-box select {
-        margin-top: 10px;
-        padding: 5px;
-        border-radius: 10px;
-        border: 1px solid #ddd;
-        width: 100%;
-    }
-
-    .cp-display {
-        max-width: 600px;
-        margin: 0 auto;
-        padding: 25px;
-        text-align: center;
-        background: white;
-        border-radius: 20px;
-        box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-    }
-	
-	.slogan-container {
-  	  display: flex;
- 	   justify-content: center;
- 	   align-items: center;
- 	   margin-bottom: 5px;
-	}
-
-	.audio-btn {
- 	   background: none;
-	    border: none;
- 	   cursor: pointer;
- 	   font-size: 1.2rem;
-	    margin-left: 8px;
- 	   transition: transform 0.2s;
- 	   vertical-align: middle;
- 	   padding: 5px;
-	}
-
-	.audio-btn:hover {
- 	   transform: scale(1.2);
- 	   filter: drop-shadow(0 0 5px var(--main-pink));
-	}
-
-	.audio-btn:active {
-	    transform: scale(0.9);
-	}
+    /* 6. 手機版適配 - 確保不擋住且縮放正確 */
     @media (max-width: 768px) {
-		.audio-btn {
-     	   font-size: 1.4rem; 
-   	 	}
-        .circle-frame {
-            width: 70px;
-            height: 70px;
-        }
-        .plus-sign { font-size: 1.2rem; }
-        .member-box select { font-size: 0.8rem; }
+        h1 { font-size: 2.2rem; }
+        .glass-card { padding: 25px; width: 92%; }
+        .timeline-container::before { left: 20px; }
+        .timeline-item { padding-left: 45px; }
+        .timeline-item::after { left: 13px; }
+        .circle-frame { width: 85px; height: 85px; }
+        .quick-nav-buttons button { padding: 8px 15px; font-size: 0.85rem; }
     }
 
-    section[id] {
-        scroll-margin-top: calc(var(--nav-height) + 20px);
-    }
+    section[id] { scroll-margin-top: 100px; }
 </style>
 </head>
 <body>
@@ -453,6 +422,7 @@ window.onload = () => {
 </body>
 
 </html>
+
 
 
 
