修改搜索欄

--- a/discography.html
+++ b/discography.html
@@ -118,20 +118,10 @@
         .nav-arrow.left { left: -20px; }
         .nav-arrow.right { right: -20px; }
 
-        /* 搜尋區塊 */
-        .search-container {
-            max-width: 1100px; margin: 20px auto 40px; padding: 20px;
-            background: rgba(255, 255, 255, 0.8); border-radius: 20px;
-            display: flex; flex-wrap: wrap; gap: 15px;
-            justify-content: center; align-items: center;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
-        }
-        .search-box { padding: 10px; border-radius: 10px; border: 1px solid #ddd; }
 
         @media (max-width: 768px) {
             .nav-arrow { display: none; }
             .stage-card { flex: 0 0 85%; min-width: 280px; }
-            .search-container { flex-direction: column; }
         }
     </style>
 </head>
@@ -158,19 +148,29 @@
 
 <div class="container">
     <div class="search-container">
-        <div style="display:flex; gap:5px; align-items:center;">
-            日期：<input type="date" id="startDate" class="search-box"> 至 <input type="date" id="endDate" class="search-box">
+        <div class="date-group">
+            <span class="label">日期：</span>
+            <div class="date-inputs">
+                <input type="date" id="startDate" class="search-box">
+                <span class="to-text">至</span>
+                <input type="date" id="endDate" class="search-box">
+            </div>
         </div>
+
         <select id="albumFilter" class="search-box">
             <option value="">所有專輯</option>
         </select>
-        <input type="text" id="keywordSearch" class="search-box" placeholder="搜尋歌曲、舞台、成員..." style="flex-grow: 1;">
-        <button onclick="applyFilters()" style="background:#ff4081; color:white; border:none; padding:10px 20px; border-radius:10px; cursor:pointer;">搜尋</button>
-        <button onclick="clearFilters()" style="background:#eee; border:none; padding:10px 20px; border-radius:10px; cursor:pointer;">清除</button>
+
+        <input type="text" id="keywordSearch" class="search-box" placeholder="搜尋歌曲、舞台、成員...">
+
+        <div class="button-group">
+            <button onclick="applyFilters()" class="btn-search">搜尋</button>
+            <button onclick="clearFilters()" class="btn-clear">清除</button>
+        </div>
     </div>
 
     <div id="discography-content">
-        <p style="text-align: center; padding: 50px;">正在加載打歌資料...</p>
+        <p class="loading-text">正在加載打歌資料...</p>
     </div>
 </div>
 
@@ -318,5 +318,6 @@ document.querySelectorAll('.nav-menu a').forEach(n => n.addEventListener('click'
 </script>
 </body>
 </html>
+
 
 
