新增ccrew頁面以及修改all頁面

--- a/members.html
+++ b/members.html
@@ -122,66 +122,57 @@
         id: "serim", name: "朴世琳", krName: "박세림 Park Se Rim", index: 7,
         birth: "1999.03.03", pos: "隊長(前),主Rapper", mbti: "ENFJ", blood: "A",nickName:"", 
         fmMember: "父母", emoji: "🐺、🐽", color: "#FF8772", img: "images/serim.jpg", 
-        ccrewName: "WOOLPI", ccrewImg: "images/ccrew_woolpi.webp",
-        ccrewDesc: "狼+豬的結合體，性格非常懶惰，容易餓，自認為很帥氣，但其實根本不帥，總是在節食但從未成功過。"
+        ccrewName: "WOOLPI", ccrewImg: "images/ccrew_woolpi.webp"
     },
     { 
         id: "allen", name: "馬蒔權 Allen", krName: "마시권 Allen Ma", index: 8,
         birth: "1999.4.26", pos: "主Rapper,主舞", mbti: "ISFJ", blood: "A",nickName:"",
         fmMember: "父母、哥哥", emoji: "🐧", color: "#CC3D3D", img: "images/allen.jpg", 
-        ccrewName: "QUEENI", ccrewImg: "images/ccrew_queeni.webp",
-        ccrewDesc: "因為喜歡吃餃子，所以穿著餃子裝的企鵝。"
+        ccrewName: "QUEENI", ccrewImg: "images/ccrew_queeni.webp"
     },
     { 
         id: "jungmo", name: "具廷謨", krName: "구정모 Koo Jung Mo", index: 5,
         birth: "2000.2.5", pos: "領唱", mbti: "INTP", blood: "B",nickName:"", 
         fmMember: "父母", emoji: "🐱", color: "#E00096", img: "images/jungmo.jpg", 
-        ccrewName: "RANGMO", ccrewImg: "images/ccrew_rangmo.webp",
-        ccrewDesc: "待補充。"
+        ccrewName: "RANGMO", ccrewImg: "images/ccrew_rangmo.webp"
     },
      {
 		id: "woobin",name: "徐宇璸 Ruby",krName: "서우빈 Seo Woo Bin", index: 3,
 		birth: "2000.10.16",pos: "主唱", mbti: "ISTP",blood: "B",nickName:"",
 		fmMember: "父母",emoji: "🐻",color: "#FF5E00", img: "images/woobin.jpg",
-		ccrewName: "WOOKA",ccrewImg: "images/ccrew_wooka.webp",
-		ccrewDesc: "待補充。"
+		ccrewName: "WOOKKA",ccrewImg: "images/ccrew_wooka.webp"
     },
     { 
         id: "wonjin", name: "咸元進", krName: "함원진 Ham Won Jin", index: 2,
         birth: "2001.3.22", pos: "隊長、領唱、領舞", mbti: "ENFP", blood: "O",nickName:"", 
         fmMember: "父母、姊姊、弟弟", emoji: "🐥", color: "#A366FF", img: "images/wonjinM.jpg", 
-        ccrewName: "DAKONG", ccrewImg: "images/ccrew_dakong.webp",
-        ccrewDesc: "待補充。"
+        ccrewName: "DAKONG", ccrewImg: "images/ccrew_dakong.webp"
     },
 	{
 		id: "minhee",name: "姜珉熙",krName: "강민희 Kang Min Hee", index: 1,
 		birth: "2002.9.17",pos: "領唱",mbti: "ISTP",blood: "AB",nickName:"馬爾濟斯、馬鈴薯",
 		fmMember: "父母、哥哥、姊姊",emoji: "🐶、🥔",color: "#050099",img: "images/minhee.jpg",
-		ccrewName: "KANGMONG",ccrewImg: "images/ccrew_kangmong.webp",
-		ccrewDesc: "待補充。"
+		ccrewName: "KANGMONG",ccrewImg: "images/ccrew_kangmong.webp"
     },
     {
 		id: "hyeongjun",name: "宋刑準",krName: "송형준 Song Hyeong Jun", index: 4,
 		birth: "2002.11.30",pos: "隊長、主舞、副唱、Center", mbti: "INFJ",blood: "A",nickName:"巧克力貴賓(巧貴)、統營蜂蜜麵包",
 		fmMember: "父母、大姊、二姊",emoji: "🐶、🍋",color: "#47C83E",img: "images/hyeongjun.jpg",
-		ccrewName: "TEORI",ccrewImg: "images/ccrew_teori.webp",
-		ccrewDesc: "待補充。"
+		ccrewName: "TEORI",ccrewImg: "images/ccrew_teori.webp"
     },
 
     {
 		id: "taeyoung",name: "金太榮",krName: "김태영 Kim Tae Young", index: 9,
 		birth: "2003.1.27",pos: "領舞、副唱、忙內", mbti: "ENFP",blood: "AB",nickName:"",
 		fmMember: "父母",emoji: "🦊",color: "#0DB4A0",img: "images/taeyoung.jpg",
-		ccrewName: "YONG-T",ccrewImg: "images/ccrew_yongT.webp",
-		ccrewDesc: "待補充。"
+		ccrewName: "YONG-T",ccrewImg: "images/ccrew_yongT.webp"
     },
 
     {
 		id: "seongmin",name: "安性珉",krName: "안성민 An Seong Min", index: 6,
 		birth: "2003.8.1",pos: "副唱、忙內",mbti: "ISTP",blood: "O",nickName:"咚",
 		fmMember: "父母、弟弟",emoji: "🐰",color: "#FFBB00",img: "images/seongmin.jpg",
-		ccrewName: "TOMMY",ccrewImg: "images/ccrew_tommy.webp",
-		ccrewDesc: "待補充。"
+		ccrewName: "TOMMY",ccrewImg: "images/ccrew_tommy.webp"
     },
   ];
 
@@ -218,7 +209,6 @@
                     <h4>CCREW: ${m.ccrewName}</h4>
                 </div>
             </div>
-            <p class="ccrew-desc">${m.ccrewDesc}</p>
         </div>
 
         <a href="activity_member.html?member=${m.id}" class="btn-activity">個人活動回顧</a>
